--- a/dashboard/src/ui_js_params.html
+++ b/dashboard/src/ui_js_params.html
@@ -56,6 +56,12 @@ RETRO_COACH_FEES_CSV: {
   help:'Liste CSV. Ces frais seront exclus des règles joueurs et des exports membres.'
 },
 
+RETRO_GROUP_U9U12_PROGRAM_KEYWORDS: {
+  group:'retro-m',
+  title:'Mots-clés programmes U9-U12 standard',
+  help:'Virgules. Ex.: saison,automne-hiver,hiver,ete'
+},
+
 // --- Règles (optionnel) ---
 RETRO_RULES_JSON: {
   group:'rules',
@@ -134,6 +140,7 @@ RETRO_RULES_JSON: {
   RETRO_GART_IGNORE_FEES_CSV: { group:'retro-ga', title:'Articles à ignorer', help:'Virgules.' },
   RETRO_GART_ELITE_KEYWORDS: { group:'retro-ga', title:'Clés « élite » à exclure', help:'Virgules.' },
   RETRO_GART_REQUIRE_MAPPING: { group:'retro-ga', title:'Exiger un mapping valide', help:'N’écrire que si un mapping GROUPES_ARTICLES matche.' },
+
 };
 
 
